<resources>
    <string name="app_name">Guitar online shop</string>
    <string name="product_fetching_failure">Fetching products failed, please try again</string>
    <string name="retry">Retry</string>
    <string name="item_product_image_content">There is a photo of guitar</string>
    <string name="no_products">There are no products yet</string>
    <string name="send_product">Send</string>
    <string name="error_on_sending_product">Failed to send the product, please try again</string>
    <string name="submit_products_hint_name">Enter name</string>
    <string name="submit_products_hint_price">Enter price</string>
    <string name="submit_products_hint_description">Enter description</string>
    <string name="successfully_uploaded">Successfully uploaded</string>
    <string name="show_product">Show product</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="max_price">Max rice</string>
    <string name="min_price">Min price</string>
    <string name="int_limit">Sorry we don\'t have so much expensive guitars</string>
    <string name="low_high_balance_error">Minimum price should be smaller than Maximum price</string>
    <string name="search_product">Qidir shettan</string>
    <string name="sort_price_min_to_max">Price: low to high</string>
    <string name="sort_price_max_to_min">Price: from hight to low</string>
    <string name="select_image">Select an image</string>
    <string name="add_image">Add an image</string>
    <string name="failed_to_get_image">Failed to get the image</string>
    <string name="no_camera_app">Your device has no compatible camera app</string>
    <string name="long_dummy_text">ljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurloj ljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurloj ljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurloj ljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurlojljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurloj ljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurlojljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurloj ljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurlojljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurloj ljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurlojljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurloj ljslkdfjlksdajflisueoirjslkdfjsdlfjsdlkjflksdjlf jlkdsjflksdjfoiweurloj</string>
    <string name="show_more_comments">Show more comments</string>
    <string name="show_more_description">View more</string>
    <string name="input_email">Enter your email</string>
    <string name="input_password">Enter your password</string>
    <string name="login_submit">Submit</string>
    <string name="navigate_sign_up">Don\'t have an account? Sign up</string>
    <string name="navigate_sign_in">Have an account? Sign in</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up">Sign up</string>

    <!--  Validation error texts  -->
    <string name="validation_empty_field">This field can\'t be empty</string>
    <string name="validation_invalid_value">Invalid value</string>
    <string name="validation_price_above_zero">Price should be bigger than zero</string>
    <string name="validation_desc_min">Description should be at least 10 charecters</string>
    <string name="validation_desc_max">Description should not contain more than 600 charecters</string>
    <string name="validation_not_email">It is not proper email address</string>
    <string name="validation_short_password">Password should be longer than 3 charecters</string>
    <string name="validation_long_password">Password mustn\'t longer than 256 charecters</string>
    <string name="validation_password_with_space">Password can\'t contain space</string>
    <string name="validation_not_matching_passwords">Passwords should match</string>
    <string name="failed_to_sign_in">Failed to sign in</string>
    <string name="failed_to_sign_up">Failed to sign up</string>
    <string name="label_email">Email: </string>
</resources>