<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_submit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/submit_product_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/submit_products_hint_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_submit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/input_layout_submit_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/submit_product_price_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/submit_products_hint_price"
            android:inputType="numberDecimal"
            app:boxBackgroundColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_submit_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/submit_products_hint_description"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/input_layout_submit_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/submit_product_desc_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="6" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_product_send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/send_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_submit_desc" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/submit_product_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/submit_product_send_btn"
        app:layout_constraintEnd_toEndOf="@id/submit_product_send_btn"
        app:layout_constraintStart_toStartOf="@id/submit_product_send_btn"
        app:layout_constraintTop_toTopOf="@id/submit_product_send_btn" />

    <TextView
        android:id="@+id/submit_product_message_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_product_send_btn" />

    <Button
        android:id="@+id/submit_products_product_details_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/show_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_product_message_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>
