<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email_sign_in_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/textlayout_email"
        app:layout_constraintStart_toStartOf="@id/textlayout_email"
        app:layout_constraintTop_toBottomOf="@id/textlayout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forget_password"
        android:textColor="@color/link_btn"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/textlayout_password"
        app:layout_constraintTop_toBottomOf="@id/textlayout_password" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/login_submit"
        app:layout_constraintEnd_toEndOf="@id/textlayout_password"
        app:layout_constraintStart_toStartOf="@id/textlayout_password"
        app:layout_constraintTop_toBottomOf="@id/forget_password_btn"
        tools:visibility="visible" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/submit_btn"
        app:layout_constraintStart_toStartOf="@id/submit_btn"
        app:layout_constraintTop_toTopOf="@id/submit_btn"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/message_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:maxLines="2"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/textlayout_password"
        app:layout_constraintStart_toStartOf="@id/textlayout_password"
        app:layout_constraintTop_toBottomOf="@id/submit_btn"
        tools:text="lsjdflkjsdlkfjsdlakl"
        tools:visibility="visible" />

    <Button
        android:id="@+id/sign_up_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>