<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/textlayout_email"
        app:layout_constraintStart_toStartOf="@id/textlayout_email"
        app:layout_constraintTop_toBottomOf="@id/textlayout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textlayout_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/textlayout_email"
        app:layout_constraintStart_toStartOf="@id/textlayout_email"
        app:layout_constraintTop_toBottomOf="@id/textlayout_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textlayout_confirm_password"
        app:layout_constraintEnd_toEndOf="@id/textlayout_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/textlayout_confirm_password"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up"
        />

    <Button
        android:id="@+id/sign_in_navigate_btn"
        android:layout_width="wrap_content"
        android:layout_marginBottom="4dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/navigate_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>