<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Spinner
        android:id="@+id/dialog_filter_sort_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dropdown"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_low_price_dialog_filter"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/input_layout_high_price_dialog_filter"
        app:layout_constraintTop_toBottomOf="@id/dialog_filter_sort_spinner"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filtering_low_price_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            tools:text="0"
            android:hint="@string/min_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_high_price_dialog_filter"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/input_layout_low_price_dialog_filter"
        app:layout_constraintTop_toBottomOf="@id/dialog_filter_sort_spinner"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filtering_high_price_edt"
            android:layout_width="match_parent"
            tools:text="1500"
            android:inputType="number"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:hint="@string/max_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/filtering_apply_btn"
        app:layout_constraintTop_toBottomOf="@id/input_layout_low_price_dialog_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>